--- a/doc/paper.tex
+++ b/doc/paper.tex
@@ -2783,8 +2783,17 @@ can be found in \secref{sec:comparison}.
 \section{Conclusions}
 
 We presented \fs, a Mathematica package, which generates fast and
-modular spectrum generators for non-minimal SUSY models.  [TODO:
-That's basically all, but we could add more.]
+modular spectrum generators for non-minimal SUSY models.  It comes
+with plenty of predefined models for the CMSSM, NMSSM, USSM, \ESSM,
+MRSSM etc., which can be used out of the box.  In particular the CMSSM
+and NMSSM spectrum generators constitute alternatives for to the
+existing ones Softsusy, SPheno and NMSPEC.  We have shown that the
+generated source code can be influenced at two different levels: The
+\mathematica level where the user provides a model file, and the C++
+level where the generated objects can be easily exchanged, extended,
+modified and reused.  This provides great flexibility for creating
+custom spectrum generators for both the most common and most
+extraordinary models.
 
 \section*{Acknowledgments}
 
