--- a/doc/paper.tex
+++ b/doc/paper.tex
@@ -146,9 +146,9 @@ Higgs
 \noindent{\em Program title:} \fs\\ {\em Program obtainable from:}
          {\tt http://flexiblesusy.hepforge.org/}\\ {\em Distribution
            format:}\/ tar.gz\\ {\em Programming language:} {\tt
-           C++, Wolfram/\mathematica, FORTRAN}\\ {\em Computer:}\/ Personal computer\\ {\em Operating
-           system:}\/ Tested on Linux 3.x, MacOS\\ {\em Word size:}\/ 64
-         bits\\ {\em External routines:}\/ SARAH 4.0.4, Boost library,
+           C++, Wolfram/\mathematica, FORTRAN, Bourne shell}\\ {\em Computer:}\/ Personal computer\\ {\em Operating
+           system:}\/ Tested on Linux 3.x, MacOS\\
+         {\em External routines:}\/ SARAH 4.0.4, Boost library,
          Eigen, LAPACK\\ {\em
            Typical running time:}\/ 0.1-0.3 seconds per parameter
          point.\\ {\em Nature of problem:}\/ Determining the mass
