doc/paper.tex: change title of sec:quick-start-cmssm

--- a/doc/paper.tex
+++ b/doc/paper.tex
@@ -449,7 +449,7 @@ Optional:
   \url{http://www.feynarts.de/looptools/}
 \end{itemize}
 
-\subsection{Download and generating a first spectrum generator}
+\subsection{Downloading \fs and generating a first spectrum generator}
 \label{sec:quick-start-cmssm}
 
 \fs can be downloaded as a gzipped tar file from
