avoid term "out of the box"

--- a/doc/paper.tex
+++ b/doc/paper.tex
@@ -2790,7 +2790,7 @@ can be found in \secref{sec:comparison}.
 We presented \fs, a Mathematica package, which generates fast and
 modular spectrum generators for non-minimal SUSY models.  It comes
 with plenty of predefined models for the CMSSM, NMSSM, USSM, \ESSM,
-MRSSM etc., which can be used out of the box.  In particular the CMSSM
+MRSSM etc., which can be generated immediately without any editing.  In particular the CMSSM
 and NMSSM spectrum generators constitute alternatives for to the
 existing ones Softsusy, SPheno and NMSPEC.  We have shown that the
 generated source code can be influenced at two different levels: The
