--- a/doc/paper.tex
+++ b/doc/paper.tex
@@ -1006,7 +1006,7 @@ in form of a vector as well.
 All SUSY model parameters and their $\beta$-functions are contained in
 the first and second derived classes.  The structure of the
 $\beta$-functions of a general SUSY model
-\cite{Jones:1974pg,Jones:1983vk,West:1984dg,Martin:1993yx,Yamada:1993ga,MV94,Fonseca:2011vn,Sperling:2013eva,Sperling:2013xqa}
+\cite{Jones:1974pg,Jones:1983vk,West:1984dg,Martin:1993yx,Yamada:1993ga,MV94,Fonseca:2011vn,Yam94,Sperling:2013eva,Sperling:2013xqa}
 allows to split these parameters into two classes:
 %
 \begin{enumerate}
@@ -2779,7 +2779,7 @@ agree at the sub-permille level.  Analytic tests of the $R$-symmetric
 low-energy model, MRSSM, were done by Philip Diessner and several bugs
 in \fs and SARAH were identified and fixed.
 
-TODO: Adding tests against the CE$_6$SSM?
+TODO: Adding tests against the CE$_6$SSM?  \cite{Athron:2009bs,Athron:2012pw}
 
 We also compared the run-time of \fs against SPheno, Softsusy and the
 SARAH generated MSSM spectrum generator SPhenoMSSM.  The test results
@@ -3035,6 +3035,16 @@ Block MINPAR
   hep-ph/9305342.
   %%CITATION = HEP-PH/9305342;%%
   %82 citations counted in INSPIRE as of 03 Nov 2013
+
+%\cite{Chowdhury:2011zr}
+\bibitem{Chowdhury:2011zr}
+  D.~Chowdhury, R.~Garani and S.~K.~Vempati,
+  %``SUSEFLAV: Program for supersymmetric mass spectra with seesaw mechanism and rare lepton flavor violating decays,''
+  Comput.\ Phys.\ Commun.\  {\bf 184} (2013) 899
+  [arXiv:1109.3551 [hep-ph]].
+  %%CITATION = ARXIV:1109.3551;%%
+  %16 citations counted in INSPIRE as of 03 Jun 2014
+
 %\cite{Ellwanger:2006rn}
 \bibitem{Ellwanger:2006rn} 
   U.~Ellwanger and C.~Hugonie,
@@ -3164,6 +3174,51 @@ White, Phys. Rev. D {\bf 49} (1994) 2435; S.F. King and P.L. White, Phys. Rev. D
   %%CITATION = ARXIV:1309.7223;%%
   %2 citations counted in INSPIRE as of 12 Oct 2013
 
+%\cite{Degrassi:2001yf}
+\bibitem{Degrassi:2001yf}
+  G.~Degrassi, P.~Slavich and F.~Zwirner,
+  %``On the neutral Higgs boson masses in the MSSM for arbitrary stop mixing,''
+  Nucl.\ Phys.\ B {\bf 611} (2001) 403
+  [hep-ph/0105096].
+  %%CITATION = HEP-PH/0105096;%%
+  %166 citations counted in INSPIRE as of 04 Apr 2014
+
+%\cite{Brignole:2001jy}
+\bibitem{Brignole:2001jy}
+  A.~Brignole, G.~Degrassi, P.~Slavich and F.~Zwirner,
+  %``On the O(alpha(t)**2) two loop corrections to the neutral Higgs boson masses in the MSSM,''
+  Nucl.\ Phys.\ B {\bf 631} (2002) 195
+  [hep-ph/0112177].
+  %%CITATION = HEP-PH/0112177;%%
+  %192 citations counted in INSPIRE as of 04 Apr 2014
+
+%\cite{Dedes:2002dy}
+\bibitem{Dedes:2002dy}
+  A.~Dedes and P.~Slavich,
+  %``Two loop corrections to radiative electroweak symmetry breaking in the MSSM,''
+  Nucl.\ Phys.\ B {\bf 657} (2003) 333
+  [hep-ph/0212132].
+  %%CITATION = HEP-PH/0212132;%%
+  %53 citations counted in INSPIRE as of 04 Apr 2014
+
+%\cite{Brignole:2002bz}
+\bibitem{Brignole:2002bz}
+  A.~Brignole, G.~Degrassi, P.~Slavich and F.~Zwirner,
+  %``On the two loop sbottom corrections to the neutral Higgs boson masses in the MSSM,''
+  Nucl.\ Phys.\ B {\bf 643} (2002) 79
+  [hep-ph/0206101].
+  %%CITATION = HEP-PH/0206101;%%
+  %152 citations counted in INSPIRE as of 04 Apr 2014
+
+%\cite{Dedes:2003km}
+\bibitem{Dedes:2003km}
+  A.~Dedes, G.~Degrassi and P.~Slavich,
+  %``On the two loop Yukawa corrections to the MSSM Higgs boson masses at large tan beta,''
+  Nucl.\ Phys.\ B {\bf 672} (2003) 144
+  [hep-ph/0305127].
+  %%CITATION = HEP-PH/0305127;%%
+  %99 citations counted in INSPIRE as of 04 Apr 2014
+
 %\cite{Degrassi:2009yq}
 \bibitem{Degrassi:2009yq} 
   G.~Degrassi and P.~Slavich,
@@ -3172,6 +3227,9 @@ White, Phys. Rev. D {\bf 49} (1994) 2435; S.F. King and P.L. White, Phys. Rev. D
   [arXiv:0907.4682 [hep-ph]].
   %%CITATION = ARXIV:0907.4682;%%
   %35 citations counted in INSPIRE as of 21 Sep 2013
+
+\bibitem{eigen}
+  Eigen library, version 3.1 \url{http://eigen.tuxfamily.org}.
 
 %\cite{Skands:2003cj}
 \bibitem{Skands:2003cj}
@@ -3199,6 +3257,68 @@ White, Phys. Rev. D {\bf 49} (1994) 2435; S.F. King and P.L. White, Phys. Rev. D
   [arXiv:0910.1785 [hep-ph]].
   %%CITATION = ARXIV:0910.1785;%%
   %327 citations counted in INSPIRE as of 21 Sep 2013
+
+%\cite{Fayet:1977yc}
+\bibitem{Fayet:1977yc}
+  P.~Fayet,
+  %``Spontaneously Broken Supersymmetric Theories of Weak, Electromagnetic and Strong Interactions,''
+  Phys.\ Lett.\ B {\bf 69} (1977) 489.
+  %%CITATION = PHLTA,B69,489;%%
+  %817 citations counted in INSPIRE as of 04 Jun 2014
+
+%\cite{Cvetic:1997ky}
+\bibitem{Cvetic:1997ky}
+  M.~Cvetic, D.~A.~Demir, J.~R.~Espinosa, L.~L.~Everett and P.~Langacker,
+  %``Electroweak breaking and the mu problem in supergravity models with an additional U(1),''
+  Phys.\ Rev.\ D {\bf 56} (1997) 2861
+   [Erratum-ibid.\ D {\bf 58} (1998) 119905]
+  [hep-ph/9703317].
+  %%CITATION = HEP-PH/9703317;%%
+  %237 citations counted in INSPIRE as of 04 Jun 2014
+
+%\cite{Erler:2002pr}
+\bibitem{Erler:2002pr}
+  J.~Erler, P.~Langacker and T.~-j.~Li,
+  %``The $Z$ - $Z^\prime$ mass hierarchy in a supersymmetric model with a secluded U(1) -prime breaking sector,''
+  Phys.\ Rev.\ D {\bf 66} (2002) 015002
+  [hep-ph/0205001].
+  %%CITATION = HEP-PH/0205001;%%
+  %84 citations counted in INSPIRE as of 04 Jun 2014
+
+%\cite{King:2005jy}
+\bibitem{King:2005jy} 
+  S.~F.~King, S.~Moretti and R.~Nevzorov,
+  %``Theory and phenomenology of an exceptional supersymmetric standard model,''
+  Phys.\ Rev.\ D {\bf 73}, 035009 (2006)
+  [hep-ph/0510419].
+  %%CITATION = HEP-PH/0510419;%%
+  %130 citations counted in INSPIRE as of 03 Nov 2013
+
+%\cite{Athron:2007en}
+\bibitem{Athron:2007en}
+  P.~Athron, S.~F.~King, D.~J.~Miller, S.~Moretti and R.~Nevzorov,
+  %``Electroweak symmetry breaking in the E(6)SSM,''
+  J.\ Phys.\ Conf.\ Ser.\  {\bf 110} (2008) 072001
+  [arXiv:0708.3248 [hep-ph]].
+  %%CITATION = ARXIV:0708.3248;%%
+  %2 citations counted in INSPIRE as of 04 Jun 2014
+
+%\cite{Kribs:2007ac}
+\bibitem{Kribs:2007ac}
+  G.~D.~Kribs, E.~Poppitz and N.~Weiner,
+  %``Flavor in supersymmetry with an extended R-symmetry,''
+  Phys.\ Rev.\ D {\bf 78} (2008) 055010
+  [arXiv:0712.2039 [hep-ph]].
+  %%CITATION = ARXIV:0712.2039;%%
+  %130 citations counted in INSPIRE as of 06 Jun 2014
+
+%\cite{Staub:2008uz}
+\bibitem{Staub:2008uz}
+  F.~Staub,
+  %``Sarah,''
+  arXiv:0806.0538 [hep-ph].
+  %%CITATION = ARXIV:0806.0538;%%
+  %82 citations counted in INSPIRE as of 03 Jun 2014
 
 %\cite{Jones:1974pg}
 \bibitem{Jones:1974pg}
@@ -3288,36 +3408,6 @@ White, Phys. Rev. D {\bf 49} (1994) 2435; S.F. King and P.L. White, Phys. Rev. D
   %%CITATION = ARXIV:1310.7629;%%
   %4 citations counted in INSPIRE as of 21 Feb 2014
 
-%\cite{Ell08}
-\bibitem{Ell08} 
-  U.~Ellwanger, C.~-C.~Jean-Louis and A.~M.~Teixeira,
-  %``Phenomenology of the General NMSSM with Gauge Mediated Supersymmetry Breaking,''
-  JHEP {\bf 0805}, 044 (2008)
-  [arXiv:0803.2962 [hep-ph]].
-  %%CITATION = ARXIV:0803.2962;%%
-  %28 citations counted in INSPIRE as of 24 Sep 2013
-
-
-\bibitem{Barger:1993gh} 
-  V.~D.~Barger, M.~S.~Berger and P.~Ohmann,
-  %``The Supersymmetric particle spectrum,''
-  Phys.\ Rev.\ D {\bf 49}, 4908 (1994)
-  [hep-ph/9311269].
-  %%CITATION = HEP-PH/9311269;%%
-  %365 citations counted in INSPIRE as of 03 Nov 2013
-
-\bibitem{eigen}
-Eigen library, version 3.1 \url{http://eigen.tuxfamily.org}.
-
-%\cite{King:2005jy}
-\bibitem{King:2005jy} 
-  S.~F.~King, S.~Moretti and R.~Nevzorov,
-  %``Theory and phenomenology of an exceptional supersymmetric standard model,''
-  Phys.\ Rev.\ D {\bf 73}, 035009 (2006)
-  [hep-ph/0510419].
-  %%CITATION = HEP-PH/0510419;%%
-  %130 citations counted in INSPIRE as of 03 Nov 2013
-
 %\cite{Beringer:1900zz}
 \bibitem{Beringer:1900zz}
   J.~Beringer {\it et al.}  [Particle Data Group Collaboration],
@@ -3325,6 +3415,14 @@ Eigen library, version 3.1 \url{http://eigen.tuxfamily.org}.
   Phys.\ Rev.\ D {\bf 86} (2012) 010001.
   %%CITATION = PHRVA,D86,010001;%%
   %3229 citations counted in INSPIRE as of 22 Feb 2014
+
+%\cite{Hall:1980kf}
+\bibitem{Hall:1980kf}
+  L.~J.~Hall,
+  %``Grand Unification of Effective Gauge Theories,''
+  Nucl.\ Phys.\ B {\bf 178} (1981) 75.
+  %%CITATION = NUPHA,B178,75;%%
+  %265 citations counted in INSPIRE as of 10 May 2014
 
 %\cite{Bednyakov:2002sf}
 \bibitem{Bednyakov:2002sf}
@@ -3344,50 +3442,13 @@ Eigen library, version 3.1 \url{http://eigen.tuxfamily.org}.
   %%CITATION = HEP-PH/0207126;%%
   %55 citations counted in INSPIRE as of 22 Feb 2014
 
-%\cite{Degrassi:2001yf}
-\bibitem{Degrassi:2001yf}
-  G.~Degrassi, P.~Slavich and F.~Zwirner,
-  %``On the neutral Higgs boson masses in the MSSM for arbitrary stop mixing,''
-  Nucl.\ Phys.\ B {\bf 611} (2001) 403
-  [hep-ph/0105096].
-  %%CITATION = HEP-PH/0105096;%%
-  %166 citations counted in INSPIRE as of 04 Apr 2014
-
-%\cite{Brignole:2001jy}
-\bibitem{Brignole:2001jy}
-  A.~Brignole, G.~Degrassi, P.~Slavich and F.~Zwirner,
-  %``On the O(alpha(t)**2) two loop corrections to the neutral Higgs boson masses in the MSSM,''
-  Nucl.\ Phys.\ B {\bf 631} (2002) 195
-  [hep-ph/0112177].
-  %%CITATION = HEP-PH/0112177;%%
-  %192 citations counted in INSPIRE as of 04 Apr 2014
-
-%\cite{Dedes:2002dy}
-\bibitem{Dedes:2002dy}
-  A.~Dedes and P.~Slavich,
-  %``Two loop corrections to radiative electroweak symmetry breaking in the MSSM,''
-  Nucl.\ Phys.\ B {\bf 657} (2003) 333
-  [hep-ph/0212132].
-  %%CITATION = HEP-PH/0212132;%%
-  %53 citations counted in INSPIRE as of 04 Apr 2014
-
-%\cite{Brignole:2002bz}
-\bibitem{Brignole:2002bz}
-  A.~Brignole, G.~Degrassi, P.~Slavich and F.~Zwirner,
-  %``On the two loop sbottom corrections to the neutral Higgs boson masses in the MSSM,''
-  Nucl.\ Phys.\ B {\bf 643} (2002) 79
-  [hep-ph/0206101].
-  %%CITATION = HEP-PH/0206101;%%
-  %152 citations counted in INSPIRE as of 04 Apr 2014
-
-%\cite{Dedes:2003km}
-\bibitem{Dedes:2003km}
-  A.~Dedes, G.~Degrassi and P.~Slavich,
-  %``On the two loop Yukawa corrections to the MSSM Higgs boson masses at large tan beta,''
-  Nucl.\ Phys.\ B {\bf 672} (2003) 144
-  [hep-ph/0305127].
-  %%CITATION = HEP-PH/0305127;%%
-  %99 citations counted in INSPIRE as of 04 Apr 2014
+\bibitem{Barger:1993gh} 
+  V.~D.~Barger, M.~S.~Berger and P.~Ohmann,
+  %``The Supersymmetric particle spectrum,''
+  Phys.\ Rev.\ D {\bf 49}, 4908 (1994)
+  [hep-ph/9311269].
+  %%CITATION = HEP-PH/9311269;%%
+  %365 citations counted in INSPIRE as of 03 Nov 2013
 
 \bibitem{NUHM}
 %\cite{Berezinsky:1995cj}
@@ -3526,23 +3587,6 @@ Large Muon- and electron-Number Nonconservation in Supergravity Theories,}
   %%CITATION = HEP-PH/0509048;%%
   %27 citations counted in INSPIRE as of 05 Jun 2014
 
-%\cite{Hall:1980kf}
-\bibitem{Hall:1980kf}
-  L.~J.~Hall,
-  %``Grand Unification of Effective Gauge Theories,''
-  Nucl.\ Phys.\ B {\bf 178} (1981) 75.
-  %%CITATION = NUPHA,B178,75;%%
-  %265 citations counted in INSPIRE as of 10 May 2014
-
-%\cite{Chowdhury:2011zr}
-\bibitem{Chowdhury:2011zr}
-  D.~Chowdhury, R.~Garani and S.~K.~Vempati,
-  %``SUSEFLAV: Program for supersymmetric mass spectra with seesaw mechanism and rare lepton flavor violating decays,''
-  Comput.\ Phys.\ Commun.\  {\bf 184} (2013) 899
-  [arXiv:1109.3551 [hep-ph]].
-  %%CITATION = ARXIV:1109.3551;%%
-  %16 citations counted in INSPIRE as of 03 Jun 2014
-
 %\cite{Athron:2009bs}
 \bibitem{Athron:2009bs}
   P.~Athron, S.~F.~King, D.~J.~Miller, S.~Moretti and R.~Nevzorov,
@@ -3560,59 +3604,6 @@ Large Muon- and electron-Number Nonconservation in Supergravity Theories,}
   [arXiv:1209.1470 [hep-ph]].
   %%CITATION = ARXIV:1209.1470;%%
   %5 citations counted in INSPIRE as of 03 Jun 2014
-
-%\cite{Staub:2008uz}
-\bibitem{Staub:2008uz}
-  F.~Staub,
-  %``Sarah,''
-  arXiv:0806.0538 [hep-ph].
-  %%CITATION = ARXIV:0806.0538;%%
-  %82 citations counted in INSPIRE as of 03 Jun 2014
-
-%\cite{Fayet:1977yc}
-\bibitem{Fayet:1977yc}
-  P.~Fayet,
-  %``Spontaneously Broken Supersymmetric Theories of Weak, Electromagnetic and Strong Interactions,''
-  Phys.\ Lett.\ B {\bf 69} (1977) 489.
-  %%CITATION = PHLTA,B69,489;%%
-  %817 citations counted in INSPIRE as of 04 Jun 2014
-
-%\cite{Cvetic:1997ky}
-\bibitem{Cvetic:1997ky}
-  M.~Cvetic, D.~A.~Demir, J.~R.~Espinosa, L.~L.~Everett and P.~Langacker,
-  %``Electroweak breaking and the mu problem in supergravity models with an additional U(1),''
-  Phys.\ Rev.\ D {\bf 56} (1997) 2861
-   [Erratum-ibid.\ D {\bf 58} (1998) 119905]
-  [hep-ph/9703317].
-  %%CITATION = HEP-PH/9703317;%%
-  %237 citations counted in INSPIRE as of 04 Jun 2014
-
-%\cite{Erler:2002pr}
-\bibitem{Erler:2002pr}
-  J.~Erler, P.~Langacker and T.~-j.~Li,
-  %``The $Z$ - $Z^\prime$ mass hierarchy in a supersymmetric model with a secluded U(1) -prime breaking sector,''
-  Phys.\ Rev.\ D {\bf 66} (2002) 015002
-  [hep-ph/0205001].
-  %%CITATION = HEP-PH/0205001;%%
-  %84 citations counted in INSPIRE as of 04 Jun 2014
-
-%\cite{Athron:2007en}
-\bibitem{Athron:2007en}
-  P.~Athron, S.~F.~King, D.~J.~Miller, S.~Moretti and R.~Nevzorov,
-  %``Electroweak symmetry breaking in the E(6)SSM,''
-  J.\ Phys.\ Conf.\ Ser.\  {\bf 110} (2008) 072001
-  [arXiv:0708.3248 [hep-ph]].
-  %%CITATION = ARXIV:0708.3248;%%
-  %2 citations counted in INSPIRE as of 04 Jun 2014
-
-%\cite{Kribs:2007ac}
-\bibitem{Kribs:2007ac}
-  G.~D.~Kribs, E.~Poppitz and N.~Weiner,
-  %``Flavor in supersymmetry with an extended R-symmetry,''
-  Phys.\ Rev.\ D {\bf 78} (2008) 055010
-  [arXiv:0712.2039 [hep-ph]].
-  %%CITATION = ARXIV:0712.2039;%%
-  %130 citations counted in INSPIRE as of 06 Jun 2014
 
 \end{thebibliography}
 \end{document}
