typo fix gauge-single -> gauge singlet

--- a/doc/paper.tex
+++ b/doc/paper.tex
@@ -1864,7 +1864,7 @@ in that an existing model has been reused.
 A more non-trivial modification might involve
 an extension of the particle content as well as the interactions.
 One of the simplest classes of models beyond the MSSM is
-those with additional gauge-single fields.
+those with additional gauge-singlet fields.
 In what follows, a supersymmetric type-I see-saw model
 \cite{see-saw}
 shall be considered in which
