doc/paper.tex: relate a sentence better to the preceding one

--- a/doc/paper.tex
+++ b/doc/paper.tex
@@ -2491,7 +2491,7 @@ might still remain obscure to the reader
 since \fs automatically took care of it.
 Here, an example shall be exhibited
 with the emphasis on the modular C++ code structure
-that helps programming.
+that helps such programming tasks.
 Concretely,
 the auto-generated low-energy boundary condition on the MSSM
 shall be modified so that
