doc/paper.tex: replace MacOS by Mac OS X
Mac OS was not Unix-like until version 9.

--- a/doc/paper.tex
+++ b/doc/paper.tex
@@ -147,7 +147,7 @@ Higgs
          {\tt http://flexiblesusy.hepforge.org/}\\ {\em Distribution
            format:}\/ tar.gz\\ {\em Programming language:} {\tt
            C++, Wolfram/\mathematica, FORTRAN, Bourne shell}\\ {\em Computer:}\/ Personal computer\\ {\em Operating
-           system:}\/ Tested on Linux 3.x, MacOS\\
+           system:}\/ Tested on Linux 3.x, Mac OS X\\
          {\em External routines:}\/ SARAH 4.0.4, Boost library,
          Eigen, LAPACK\\ {\em
            Typical running time:}\/ 0.06-0.2 seconds per parameter
@@ -2822,7 +2822,7 @@ A.V.\ would like to thank Florian Staub for countless explanations of
 SARAH's internals, discussions, and exceptionally fast bug fixing.
 Finally the authors thank Philip Diessner for testing and identifying
 bugs in the MRSSM model file, as well as Ulrik Günther for compilation
-tests on MacOS.
+tests on Mac OS X\@.
 
 \appendix
 
