added more to acknowledgements.

--- a/doc/paper.tex
+++ b/doc/paper.tex
@@ -2838,10 +2838,15 @@ precision and reliability.
 \section*{Acknowledgments}
 
 A.V.\ would like to thank Florian Staub for countless explanations of
-SARAH's internals, discussions, and exceptionally fast bug fixing.
-Finally the authors thank Philip Diessner for testing and identifying
-bugs in the MRSSM model file, as well as Ulrik Günther for compilation
-tests on Mac OS X\@.
+SARAH's internals, discussions, and exceptionally fast bug
+fixing. P.A.~would like to thank Roman Nevzorov for useful discussions
+about challenges in non-minimal SUSY models. The authors would also
+like to thank Lewis Tunstall for helping with early tests against
+Next-to-Minimal Softsusy; Sophie Underwood for discovering problems
+introducing couplings wih a single family indice; Philip Diessner for
+testing and identifying bugs in the MRSSM model file; Ulrik Günther
+for compilation tests on Mac OS X\@ and Dylan Harries for spotting
+a bug in the configuration script.
 
 \appendix
 
