fixed typos in last edit.

--- a/doc/paper.tex
+++ b/doc/paper.tex
@@ -2843,7 +2843,7 @@ fixing. P.A.~would like to thank Roman Nevzorov for useful discussions
 about challenges in non-minimal SUSY models. The authors would also
 like to thank Lewis Tunstall for helping with early tests against
 Next-to-Minimal Softsusy; Sophie Underwood for discovering problems
-introducing couplings wih a single family indice; Philip Diessner for
+introducing couplings with a single family index; Philip Diessner for
 testing and identifying bugs in the MRSSM model file; Ulrik Günther
 for compilation tests on Mac OS X\@ and Dylan Harries for spotting
 a bug in the configuration script.
