added another sentcence regarding additional solver.

--- a/doc/paper.tex
+++ b/doc/paper.tex
@@ -1687,10 +1687,10 @@ return E6SSMnew_susy_parameters(get_scale(), get_loops(), get_thresholds(), inpu
 beta_Yd, beta_Ye, beta_Kappa, beta_Lambda12, beta_Lambdax, beta_Yu, beta_MuPr, beta_g1, beta_g2, beta_g3, beta_g1p, beta_vd, beta_vu, beta_vs);
 }
 
-In addition the modular design of FlexibleSUSY allows for the solver
+Finally instead of tinkering with the two-scale solver one may wish to replace it entirely. the modular design of FlexibleSUSY allows for the solver
 for the boundary value problem to be replaced. An alternative solver
 with better convergence properties (at the expense of slower speed) is
-already planned for a later release.
+already planned for a later release. 
 
 \subsection{Pole masses}
 \label{sec:PoleMasses}
