doc/paper.tex: add a little Zurückhaltung

--- a/doc/paper.tex
+++ b/doc/paper.tex
@@ -1666,7 +1666,7 @@ possibility of direct adaption of the code.
 Finally instead of tinkering with the two-scale solver one may wish to
 replace it entirely. The modular design of FlexibleSUSY allows for the
 solver for the boundary value problem to be replaced. An alternative
-solver with better convergence properties (at the expense of slower
+solver with potentially better convergence properties (at the expense of slower
 speed) is already planned for a later release.
 
 \subsection{Pole masses}
