--- a/doc/paper.tex
+++ b/doc/paper.tex
@@ -1651,7 +1651,7 @@ It is important to note that in the case of such problem points it is
 non-trivial to judge whether this is because there is no physical
 solution for the given parameter space point or whether a solution
 exists but the fixed point iteration is unable to find the solution.
-While \fs makes it as easy as possible to fin spectra, when studying
+While \fs makes it as easy as possible to find spectra, when studying
 new models a physical understanding of the model is still essential
 and this can help the user determine why the such problems arise.
 
@@ -1660,7 +1660,7 @@ adjust initial guesses specified in the FlexibleSUSY model file, such
 as changing the choice of \code{HighScaleFirstGuess} or altering
 \code{HighScaleMinimum} and \code{HighScaleMaximum} which can be used
 to push the iteration back towards where the solution should be if it
-gets off track.For experienced users the clear code structure also allows the
+gets off track. For experienced users the clear code structure also allows the
 possibility of direct adaption of the code. 
 
 Finally instead of tinkering with the two-scale solver one may wish to
